# open-iot-gateway

./: .gitignore  README.md  docker-compose.yaml  installation.md  notes.md  readme.md  todo.md
configs/: .gitignore
configs/homepage/: docker.yaml  services.yaml  widgets.yaml
configs/telegraf/: telegraf.conf
doc/: architecture.md  architecture.py  installation.md  mqtt.topics.md  notes.md
doc/images/: architecture.d2  architecture.py
icons/: readme.md
project/: global.env
project/applications/: docker-compose.yaml  readme.md
project/core/: core.env  docker-compose.yaml  readme.md  template.env
project/custom/: custom.env  docker-compose.yaml  readme.md
project/iotgw/: balena-hotspot  balena.yaml  docker-compose.balena.yaml  docker-compose.local.yaml  docker-compose.yaml  readme.md  template.env
project/iotgw/assets/: manager.pub
project/iotgw/chaos/: Dockerfile  __main__.py  config.json  core.py  device_monitor.py  main.py  requirements.txt  settings.py
project/iotgw/doc/: installation.md  notes.md  readme.md
project/iotgw/homepage/: Dockerfile  docker-entrypoint.sh
project/iotgw/mosquitto/: Dockerfile  docker-entrypoint.sh
project/iotgw/nodered/: Dockerfile  entrypoint.sh
project/iotgw/provisioning/: Dockerfile  todo.md
project/mother/: docker-compose.yaml  readme.md  template.env
project/services/: docker-compose.yaml  readme.md  services.env
project/services/weather/: pyproject.toml
project/services/weather/weather/: dependencies.py  main.py  models.py  mqtt.py
project/toolbox/: custom.env  docker-compose.yaml
(+146 files in other folders)
